Addresses MCKIN-1989. Naive solution that always ensures that the model-bg has a higher z-index than the header-bar, and content is one-higher

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -436,3 +436,11 @@ div.xblock-student_view {
     visibility: visible;
   }
 }
+
+.reveal-modal-bg,
+.modal-bg{
+  z-index: 100001 !important;
+}
+.reveal-modal.open{
+  z-index: 100002;
+}
